fix: pb.com — ff alignment of icon isn’t right

--- a/component/Sales.styl
+++ b/component/Sales.styl
@@ -321,9 +321,10 @@ body.scrolled
       list-style none
     .logo-icon
       position absolute
-      margin -100px auto 180px auto
+      margin 0 auto
       width 81px
       height 96px
+      top -100px
       opacity 0
       transform rotate(90deg) translate(15px, 35px)
       display block
